--- a/style.css
+++ b/style.css
@@ -1,241 +1,332 @@
+*{
+box-sizing: border-box;
+margin: 0;
+padding: 0;
+word-break: break-word;
+
+}
 body {
   font-family: "League Spartan", sans-serif;
-  justify-content: center;
-  background-size: 100%;
-  position: absolute;
+  
+}
+
+.header {
+  background-color: #f8f8f8;
+  margin-inline: auto;
+  
 }
 
 .header-container {
   display: flex;
-  width: 1440px;
-  height: 939px;
-  flex-shrink: 0;
-  padding-top: 104px;
-  padding-left: 133px;
-  padding-right: 133px;
-  padding-bottom: 211px;
-  background: #f8f8f8;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  max-width: 100%;
 }
 
-.header-title {
-  margin-bottom: 53px;
-  width: 135px;
-  height: 32px;
-  flex-shrink: 0;
-  color: var(--, #161515);
+.header__title {
+  margin-top: 100px;
   font-size: 24px;
+  font-weight: bold;
+  color: #161515;
   font-weight: 300;
-  line-height: 186%; /* 44.64px */
+  line-height: 186%;
+  margin-bottom: 53px;
+  display: inline-block;
+
 }
-.header-subtitle {
-  margin-bottom: 43px;
-  width: 888px;
-  height: 215px;
-  flex-shrink: 0;
+
+.header__subtitle {
+  max-width: 888px;
+  font-weight: bold;
   color: #272727;
+  font-family: League Spartan;
   font-size: 250px;
   font-weight: 300;
+  margin-bottom: 43px;
+
+
 }
 
-.header-description {
-  margin-bottom: 61px;
-  width: 575px;
-  height: 142px;
-  flex-shrink: 0;
+.header__description {
+  max-width: 575px;
+  font-size: 32px;
   color: #161515;
+  font-family: League Spartan;
   font-size: 32px;
   font-weight: 300;
-  line-height: 50px;
-}
+  line-height: 155%;
+  margin-bottom: 61px;
+  }
 
 .buy-wrapper {
-  display: flex;
+  display: inline-flex;
+ 
 }
 
-.btn-primary {
-  display: block;
-  width: 278px;
-  height: 82px;
+.btn__primary {
+  display: inline-block;
+  min-width: 300px;
+  padding: 30px;
   background: #161515;
   color: #fff;
   text-decoration: none;
   font-size: 32px;
-  font-weight: 300;
-  line-height: 82px;
+  line-height: 50px;
   text-align: center;
+  margin-bottom: 217px;
+  gap: 0;
 }
-.btn-primary:hover {
+
+.btn__primary:hover {
   color:#bb8b5d
 }
-.btn-primary:active {
+.btn__primary:active {
   color: rgb(221, 221, 140);
 
 }
 
 .price {
-  width: 143px;
-  height: 82px;
+  max-width: 143px;
+  padding: 30px;
   background: #fff;
   box-shadow: 0px 0px 28px 0px rgba(214, 214, 214, 0.25);
   color: #272727;
   font-size: 32px;
-  font-weight: 300;
-  line-height: 82px;
+  font-weight: 100;
+  line-height: 50px;
   text-align: center;
+  margin-bottom: 217px;
+  gap: 0;
 }
 
-.header-img-wrapper {
-}
-.header-img {
-  display: block;
-  height: 740px;
-  margin-top: -104px;
-  margin-left: -240px;
-  background: url(<path-to-image>), #f8f8f8 50% / cover no-repeat;
+.header__img {
+  width: 100%;
+  object-fit: cover;
 }
 
-.popular-title {
+.main {
+  padding: 20px;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  font-size: 24px;
-  line-height: 45px;
+ 
+
+
+}  
+
+.popular__title{
   color: #000;
+  text-align: center;
+  font-family: League Spartan;
+  font-size: 24px;
   font-weight: 300;
+  line-height: 186%; 
+
 }
 
-.models-title {
+.models__title {
+  font-weight: bold;
+  color: #000;
   text-align: center;
-  line-height: 81px;
+  font-family: League Spartan;
   font-size: 72px;
   font-weight: 400;
-  margin-bottom: 84px;
-  color: #000;
-}
-.item-wrapper {
-  margin: 0 auto;
-  width: 417px;
-  height: 630px;
-  margin-bottom: 84px;
-}
-.item-wrapper-img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 417px;
-  height: 630px;
-  background: #f8f8f8;
-  margin-bottom: 67px;
-}
-.item-title {
-  text-align: center;
-  font-size: 32px;
-  font-weight: 400;
-  margin-bottom: 17px;
-  color: #000;
+  line-height: 112.5%; 
 }
 
-.item-desc {
-  text-align: center;
 
-  font-size: 25px;
-  line-height: 50px;
-  font-weight: 300;
-  color: #161515;
-  margin-bottom: 10px;
-}
-
-/*.item-descrip {
-  display: center;
-  margin: 500px;
-  margin-left: 510px;
-  width: 496px;
-  height: 630px;
-  /*margin-bottom: 85px;*
-
-
-}*/
-
+.item-wrapper,
 .item-descrip {
-  display: center; 
-  margin: 20px auto; 
-  width: 496px;
-  height: 630px;
-  margin-bottom: 235px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  text-align: center;
+  align-items: center; 
+  justify-content: center;
+  
 }
 
-.item-desc-img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 500px;
-  height: 500px;
+
+.item__title, .item__desc__title {
+color: #000;
+text-align: center;
+font-family: League Spartan;
+font-size: 32px;
+font-weight: 400;
+margin-bottom: 17px;
+
+
+}
+
+
+.item__wrapper__img{
+  max-width: 100%;
+  height: auto;
   background: #f8f8f8;
+  padding: 71px 110px;
   margin-bottom: 67px;
-  margin-top: 400px;
+  margin-inline: auto;
+  flex-direction: column;
+
+
 }
-.item-desc-title {
-  text-align: center;
-  font-size: 32px;
-  font-weight: 400;
-  margin-top: 20px;
-  margin-bottom: 17px;
-  color: #000;
+.item__desc__img {
+  max-width: 100%;
+  height: auto;
+  background: #f8f8f8;
+  padding: 71px 110px;
+  margin-bottom: 67px;
+  margin-inline: auto;
+  flex-direction: column;
+
 }
-.item-description {
-  width: 510px;
-  height: 196px;
-  margin-top: 17px;
-  margin-bottom: 59px;
+
+.item__desc{
+  max-width: 532px;
+  color: #161515;
   text-align: center;
+  font-family: League Spartan;
   font-size: 32px;
   font-weight: 300;
-  line-height: 50px;
+  line-height: 155%;
+  margin-bottom: 85px;
+
+
+}
+.item__description{
+  max-width: 510px;
+  color: #161515;
+  text-align: center;
+  font-family: League Spartan;
+  font-size: 32px;
+  font-weight: 300;
+  line-height: 155%;
+  margin-bottom: 59px;
+
 }
 
 .product-desc-wrapper {
-  margin-top: 59px;
-  margin-left: 513px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   text-align: center;
-  width: 417px;
-  height: 630px;
+  align-items: center; 
+  justify-content: center;
+  
+
+
 }
 
-.product-desc-title {
+.product__desc__title {
+  color: #000;
   text-align: center;
+  font-family: League Spartan;
   font-size: 32px;
-  line-height: 60px;
-  margin-top: 20px;
-  margin-bottom: 9px;
   font-weight: 400;
+  line-height: 186%;
   text-transform: capitalize;
-  color: #161515;
-}
-
-.hr {
-  margin-left: 120px;
-  margin-right: 120px;
+  position: relative;
+  
+  }
+.product__desc__title::after {
+  max-width: 178.025px;
+  bottom: 9px;
+  width: 100%;
+  height: 1px;
   display: block;
-  /*margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    border-style: inset;
-    border-width: 1px;
-  color: #707070; 
-  width: 50%;*/
-}
+  content: "";
+  background: #707070;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  
+  
 
-.product-desc {
+}
+.product__desc {
+  max-width: 515px;
+  width: 100%;
+  font-size: 24px;
+  color: #161515;
   text-align: center;
-  font-style: 24px;
-  line-height: 40px;
+  font-family: League Spartan;
   font-weight: 300;
-}
-.product-desc-link {
+  line-height: 170%;
+  display: inline-block;
+  margin-bottom: 58px;
+  }
+  
+
+
+
+
+.product__desc__link {
   color: #bb8b5d;
+  text-decoration: none;
+  font-weight: bold;
+  text-decoration: underline;
 }
-.product-desc-link:hover {
+.product__desc__link:hover {
   color: yellow;
 
 }
-.product-desc-link:active {
+.product__desc__link:active {
   color: rgb(69, 16, 241);
 
+}
+@media screen and (max-width: 767px) {
+  .header {
+    text-align: center;
+    margin-inline: auto;
+  }
+  .header-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    max-width: 100%;
+  }
+
+  .buy-wrapper {
+    flex-direction: column; 
+    align-items: stretch; 
+  }
+
+  .btn__primary,
+  .price {
+    width: 100%; 
+    max-width: none; 
+    margin-bottom: 20px; 
+  }
+
+  .btn__primary {
+    padding: 20px; 
+  }
+
+  .price {
+    padding: 20px; 
+    
+  }
+
+  
+  .item__wrapper__img,
+  .item__desc__img {
+    padding: 30px;
+  }
+
+  .header__subtitle {
+    font-size: 150px;
+  }
+
+  .product__desc {
+    font-size: 20px; 
+  }
 }
